Update deploy_cert management playbook, use ssh in variable names instead of shell

--- a/etc/dehydrated/ansible/bigip-inventory.ini
+++ b/etc/dehydrated/ansible/bigip-inventory.ini
@@ -1,9 +1,9 @@
 [bigip]
 bigip.localdomain
-192.168.1.245
+192.168.1.245:2222
 
 [bigip:vars]
 bigip_username=admin
 bigip_password=admin
-bigip_shell_username=root
-bigip_shell_password=default
+bigip_ssh_username=root
+bigip_ssh_password=default
