--- a/etc/dehydrated/ansible/playbooks/bigip-clean_challenge.yml
+++ b/etc/dehydrated/ansible/playbooks/bigip-clean_challenge.yml
@@ -26,6 +26,17 @@
       retries: 10
       delay: 6
 
+    - name: Collect BIG-IP information
+      bigip_device_info:
+        gather_subset: devices
+        provider:
+          user: "{{ bigip_user }}"
+          password: "{{ bigip_password }}"
+          server: "{{ inventory_hostname }}"
+          validate_certs: no
+      register: devices
+      delegate_to: localhost
+
     - name: Update data group
       bigip_data_group:
         name: "{{ data_group_name }}"
@@ -33,6 +44,7 @@
         records: []
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Sync configuration from device to group
       bigip_configsync_action:
@@ -40,4 +52,5 @@
         sync_device_to_group: yes
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: sync_config == "1"
+      when: sync_config == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
+
