--- a/etc/dehydrated/ansible/playbooks/bigip-configure-acme-http-01.yml
+++ b/etc/dehydrated/ansible/playbooks/bigip-configure-acme-http-01.yml
@@ -25,6 +25,17 @@
       retries: 10
       delay: 6
 
+    - name: Collect BIG-IP information
+      bigip_device_info:
+        gather_subset: devices
+        provider:
+          user: "{{ bigip_user }}"
+          password: "{{ bigip_password }}"
+          server: "{{ inventory_hostname }}"
+          validate_certs: no
+      register: devices
+      delegate_to: localhost
+
     - name: Create ACME HTTP-01 challenge response iRule
       bigip_irule:
         module: ltm
@@ -54,6 +65,7 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Create a data group for ACME HTTP-01 validation
       bigip_data_group:
@@ -67,13 +79,14 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Save the running configuration of the BIG-IP
       bigip_config:
         save: yes
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: save_config == "1"
+      when: save_config == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Sync configuration from device to group
       bigip_configsync_action:
@@ -81,4 +94,5 @@
         sync_device_to_group: yes
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: sync_config == "1"
+      when: sync_config == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
+
