--- a/etc/dehydrated/ansible/playbooks/bigip-configure-lets-encrypt-ocsp-stapling.yml
+++ b/etc/dehydrated/ansible/playbooks/bigip-configure-lets-encrypt-ocsp-stapling.yml
@@ -25,6 +25,17 @@
       retries: 10
       delay: 6
 
+    - name: Collect BIG-IP information
+      bigip_device_info:
+        gather_subset: devices
+        provider:
+          user: "{{ bigip_user }}"
+          password: "{{ bigip_password }}"
+          server: "{{ inventory_hostname }}"
+          validate_certs: no
+      register: devices
+      delegate_to: localhost
+
     - name: Create basic DNS resolver configuration for OCSP stapling
       bigip_dns_resolver:
         partition: "{{ bigip_partition }}"
@@ -32,6 +43,7 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Add Let's Encrypt Staging X1 CA certificate
       bigip_ssl_certificate:
@@ -68,6 +80,7 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Add Let's Encrypt X3 CA certificate
       bigip_ssl_certificate:
@@ -104,6 +117,7 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Create OCSP stapling profile for Let's Encrypt Staging X1 CA
       bigip_ssl_ocsp:
@@ -123,6 +137,7 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Create OCSP stapling profile for Let's Encrypt X3 CA
       bigip_ssl_ocsp:
@@ -142,13 +157,14 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Save the running configuration of the BIG-IP
       bigip_config:
         save: yes
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: save_config == "1"
+      when: save_config == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Sync configuration from device to group
       bigip_configsync_action:
@@ -156,4 +172,5 @@
         sync_device_to_group: yes
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: sync_config == "1"
+      when: sync_config == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
+
