--- a/etc/dehydrated/ansible/playbooks/bigip-deploy_cert-traffic.yml
+++ b/etc/dehydrated/ansible/playbooks/bigip-deploy_cert-traffic.yml
@@ -25,6 +25,17 @@
       retries: 10
       delay: 6
 
+    - name: Collect BIG-IP information
+      bigip_device_info:
+        gather_subset: devices
+        provider:
+          user: "{{ bigip_user }}"
+          password: "{{ bigip_password }}"
+          server: "{{ inventory_hostname }}"
+          validate_certs: no
+      register: devices
+      delegate_to: localhost
+
     - name: Create/update key for cert
       bigip_ssl_key:
         partition: "{{ bigip_partition }}"
@@ -33,6 +44,7 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Create/update certificate
       bigip_ssl_certificate:
@@ -43,13 +55,14 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Enable OCSP validation/monitoring on certificate
       bigip_command:
         commands: "modify sys file ssl-cert {{ cert_name }}.crt { cert-validators replace-all-with { OCSP-STAPLE-{{ cert_issuer }} } cert-validation-options { ocsp } }"
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: ocsp_staple == "1"
+      when: ocsp_staple == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Create/update certificate chain
       bigip_ssl_certificate:
@@ -59,6 +72,7 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
+      when: inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Create/update client SSL profile
       bigip_profile_client_ssl:
@@ -72,21 +86,21 @@
         state: present
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: clientssl_manage == "1"
+      when: clientssl_manage == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Enable OCSP validation/monitoring on client SSL profile
       bigip_command:
         commands: "modify ltm profile client-ssl {{ clientssl_name }} ocsp-stapling enabled"
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: ocsp_staple == "1"
+      when: ocsp_staple == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Save the running configuration of the BIG-IP
       bigip_config:
         save: yes
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: save_config == "1"
+      when: save_config == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
 
     - name: Sync configuration from device to group
       bigip_configsync_action:
@@ -94,4 +108,5 @@
         sync_device_to_group: yes
         provider: "{{ provider }}"
       delegate_to: localhost
-      when: sync_config == "1"
+      when: sync_config == "1" and inventory_hostname == (devices.devices | selectattr('failover_state', 'search', 'active') | list | first).name
+
