Fix "undefined" username and sync variable errors
Various playbooks were failing with undefined-variable errors.

- All playbooks had typos of `bigip_user` instead of `bigip_username`.
- http01 validation hook was not passing device-sync-related variables
to `deploy_challenge` and `clean_challenge` playbooks.

--- a/etc/dehydrated/ansible/playbooks/bigip-deploy_cert-management.yml
+++ b/etc/dehydrated/ansible/playbooks/bigip-deploy_cert-management.yml
@@ -14,7 +14,7 @@
       bigip_device_info:
         gather_subset: devices
         provider:
-          user: "{{ bigip_user }}"
+          user: "{{ bigip_username }}"
           password: "{{ bigip_password }}"
           server: "{{ inventory_hostname }}"
           validate_certs: no
